# llama_common_c

./: .gitignore  CMakeLists.txt  README.md  run_build.sh
.github/workflows/: ci.yml
src/: llm.cpp  llm.h  main.cpp  simple_map.c  simple_map.h
